--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>John the Analyst</h1>
-						<p>A Passsionate Data Analyst well versed in SQL, Power BI, Tableau and Python <a href="https://www.linkedin.com/in/johnwanjai/" target="_blank">@LinkedIn</a>.</p>
+						<p>A Passionate Data Analyst well versed in SQL, Power BI, Tableau and Python <a href="https://www.linkedin.com/in/johnwanjai/" target="_blank">@LinkedIn</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
