--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 										<h2><a href="https://docs.google.com/spreadsheets/d/1dAYT8wEu7MOYaHop9hY4EdIWi2iVGdU1/edit?usp=sharing&ouid=111169459190003450409&rtpof=true&sd=true"target="_blank">Excel Dashboard (Bikes)</a></h2>
 									</header>
 									<a href="https://docs.google.com/spreadsheets/d/1dAYT8wEu7MOYaHop9hY4EdIWi2iVGdU1/edit?usp=sharing&ouid=111169459190003450409&rtpof=true&sd=true"target="_blank" class="image fit"><img src="images/Harley davidson.webp" alt="" /></a>
-									<p>This is data of a company that sells motorcycles. It containts demographic information of customers who buy the bikes. My aim was to querry if any demographic factor would sway a client more or less likely to purchase a bike. Turns out commute distance is quite the factor.</p>
+									<p>This is data of a company that sells motorcycles. It containts demographic information of customers who buy the bikes. My aim was to clean the data and create visualizations to investigate if any demographic factor sways a client more or less likely to purchase a bike. Turns out commute distance is quite the factor.</p>
 									<ul class="actions special">
 										<li><a href="https://docs.google.com/spreadsheets/d/1dAYT8wEu7MOYaHop9hY4EdIWi2iVGdU1/edit?usp=sharing&ouid=111169459190003450409&rtpof=true&sd=true"target="_blank" class="button">View Project</a></li>
 									</ul>
