--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 										<h2><a href="https://public.tableau.com/app/profile/john.wanjai/viz/LayoffsinTechIndustry-2020to2023/Dashboard1"target="_blank">Tableau visualization</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/john.wanjai/viz/LayoffsinTechIndustry-2020to2023/Dashboard1"target="_blank" class="image fit"><img src="images/Tableau.jpg" alt="" /></a>
-									<p>After data cleaning and EDA on SQL, some visualization of the tech layoffs was due. I used Tableau to visualize Layoffs per Country and per Industry. I also did some Timeseries visualization on the layoff per quater.</p>
+									<p>After data cleaning and EDA on SQL, some visualization of the tech layoffs was due. I used Tableau to visualize Layoffs per Country, per Industry and per Company. I also did some Timeseries visualization on the layoff per quater.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/john.wanjai/viz/LayoffsinTechIndustry-2020to2023/Dashboard1"target="_blank" class="button">View Project</a></li>
 									</ul>
@@ -88,7 +88,7 @@
 										<h2><a href="https://public.tableau.com/app/profile/john.wanjai/viz/BestAirBnBsinSeattleWashington/Dashboard1"target="_blank">Tableau visualization</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/john.wanjai/viz/BestAirBnBsinSeattleWashington/Dashboard1"target="_blank" class="image fit"><img src="images/Airbnb.jpg" alt="" /></a>
-									<p>Used Tableau to visualize data of Airbnbs in Seattle, Washington. The objective was to find any meaningful trends and insights. Use case was to aid someone looking to venture into the AirBnB space with some pointers like: the best zipcode to rent out a home, the type of home that sells a lot and the best time of year to rent out. The data was obtained from Kaggle.</p>
+									<p>I used Tableau to visualize data of Airbnbs in Seattle, Washington. The objective was to find any meaningful trends and insights. Use case was to aid someone looking to venture into the AirBnB space with pointers like: the best zipcode to rent out a home, the type of home that sells a lot and the best time of year to rent out.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/john.wanjai/viz/BestAirBnBsinSeattleWashington/Dashboard1"target="_blank" class="button">View Project</a></li>
 									</ul>
