--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 										<h2><a href="https://public.tableau.com/app/profile/john.wanjai/viz/LayoffsinTechIndustry-2020to2023/Dashboard1"target="_blank">Tableau visualization</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/john.wanjai/viz/LayoffsinTechIndustry-2020to2023/Dashboard1"target="_blank" class="image fit"><img src="images/Tableau.jpg" alt="" /></a>
-									<p>After data cleaning and EDA on SQL, some visualization of the tech layoffs was due. I used Tableau to visualize Layoffs per Country, per Industry and per Company. I also did some Timeseries visualization on the layoff per quater.</p>
+									<p>After data cleaning and EDA on SQL, some visualization of the tech layoffs was due. I used Tableau to visualize Layoffs per Country, per Industry and per Company. I also did Timeseries visualization on the layoffs per quarter.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/john.wanjai/viz/LayoffsinTechIndustry-2020to2023/Dashboard1"target="_blank" class="button">View Project</a></li>
 									</ul>
@@ -88,7 +88,7 @@
 										<h2><a href="https://github.com/JohnWanjai/Pandas-/blob/main/Pandas%20Data%20Cleaning.ipynb"target="_blank">Python Data Cleaning (Pandas)</a></h2>
 									</header>
 									<a href="https://github.com/JohnWanjai/Pandas-/blob/main/Pandas%20Data%20Cleaning.ipynb"target="_blank" class="image fit"><img src="images/Python.jfif" alt="" /></a>
-									<p>A company wants call data to start making calls to their clients, but the data is too raw and unworkable. I used pandas library in python to clean the data. Feel free to check out the code</p>
+									<p>A company wants call data to start making calls to their clients, but the data is too raw and unworkable. I used pandas library in python to clean the data.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/JohnWanjai/Pandas-/blob/main/Pandas%20Data%20Cleaning.ipynb"target="_blank" class="button">View Project</a></li>
 									</ul>
