--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								<header class="major">
 								
 									<h2><a href="https://github.com/JohnWanjai/PortfolioProjects/blob/main/DataCleaning_WorldLayoffs.sql"target="_blank"> Data Cleaning in SQL</h2>
-									<p>A data cleaning project based on the layoff data across the world tech space, after the industry saw some major retrenchments. The data spans the period 2020 to 2023. The project entailed removing duplicates, data standardization and handling null and blank values. All this was done using MySQL.</p>
+									<p>A SQL data cleaning project based on the layoff data across the world tech space, after the industry saw major retrenchments. The data spans the period 2020 to 2023. The project entailed removing duplicates, data standardization and handling null and blank values. I Employed Window functions, CTEs, Suquerries among other SQL techniques.</p>
 								</headers>
 								<a href="https://github.com/JohnWanjai/PortfolioProjects/blob/main/DataCleaning_WorldLayoffs.sql"target="_blank"class="image main"><img src="images/Layoffimage.jpg" alt="" /></a>
 								<ul class="actions special">
@@ -66,7 +66,7 @@
 										<h2><a href="https://github.com/JohnWanjai/PortfolioProjects/blob/main/DataExploration_WorldLayoffs.Sql"target="_blank">Data Exploration in SQL</a></h2>
 									</header>
 									<a href="https://github.com/JohnWanjai/PortfolioProjects/blob/main/DataExploration_WorldLayoffs.Sql"target="_blank" class="image fit"><img src="images/Detective.jpg" alt="" /></a>
-									<p>Data Exploration of the layoff data. We dive deep into the data to find meaningful insights, some of which are quite surprising.</p>
+									<p>Data Exploration of the layoff data in SQL using aggregation and filtering functions. We are looking for patterns and insights, some of which are quite surprising.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/JohnWanjai/PortfolioProjects/blob/main/DataExploration_WorldLayoffs.Sql"target="_blank" class="button">View Project</a></li>
 									</ul>
@@ -88,7 +88,7 @@
 										<h2><a href="https://github.com/JohnWanjai/Pandas-/blob/main/Pandas%20Data%20Cleaning.ipynb"target="_blank">Python Data Cleaning (Pandas)</a></h2>
 									</header>
 									<a href="https://github.com/JohnWanjai/Pandas-/blob/main/Pandas%20Data%20Cleaning.ipynb"target="_blank" class="image fit"><img src="images/Python.jfif" alt="" /></a>
-									<p>A company wants call data to start making calls to their clients, but the data is too raw and unworkable. I used pandas library in python to clean the data.</p>
+									<p>A company wants call data to start making calls to their clients, but the data is too raw and unworkable. I used pandas library in python to clean the data. I Employed Regular Expressions, For loops, Lamba functions among other Python techniques.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/JohnWanjai/Pandas-/blob/main/Pandas%20Data%20Cleaning.ipynb"target="_blank" class="button">View Project</a></li>
 									</ul>
