--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 										<h2><a href="https://public.tableau.com/app/profile/john.wanjai/viz/BestAirBnBsinSeattleWashington/Dashboard1"target="_blank">Tableau visualization</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/john.wanjai/viz/BestAirBnBsinSeattleWashington/Dashboard1"target="_blank" class="image fit"><img src="images/Airbnb.jpg" alt="" /></a>
-									<p>I used Tableau to visualize data of Airbnbs in Seattle, Washington. The objective was to find any meaningful trends and insights. Use case was to aid someone looking to venture into the AirBnB space with pointers like: the best zipcode to rent out a home, the type of home that sells a lot and the best time of year to rent out.</p>
+									<p>I used Tableau to visualize data of Airbnbs in Seattle, Washington. The objective was to find any meaningful trends and insights. Use case was to aid someone looking to venture into the AirBnB space with pointers like: the best zipcode to rent out a home, the type of home that sells the most, and the best time of year to rent out.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/john.wanjai/viz/BestAirBnBsinSeattleWashington/Dashboard1"target="_blank" class="button">View Project</a></li>
 									</ul>
