--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 										<h2><a href="https://public.tableau.com/app/profile/john.wanjai/viz/LayoffsinTechIndustry-2020to2023/Dashboard1"target="_blank">Tableau visualization</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/john.wanjai/viz/LayoffsinTechIndustry-2020to2023/Dashboard1"target="_blank" class="image fit"><img src="images/Tableau.jpg" alt="" /></a>
-									<p>After data cleaning and EDA on SQL, some visualization of the tech layoffs was due. I used Tableau to visualize Layoffs per Country, per Industry and per Company. I also did Timeseries visualization on the layoffs per quarter.</p>
+									<p>After data cleaning and EDA on SQL, some visualization of the tech layoffs was due. I used Tableau to visualize Layoffs per Country, per Industry and per Company. I also did a timeseries visualization on the layoffs per quarter.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/john.wanjai/viz/LayoffsinTechIndustry-2020to2023/Dashboard1"target="_blank" class="button">View Project</a></li>
 									</ul>
